--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,7 @@
 	path = VAPython
 	url = http://git.rwth-aachen.de/ita/VAPython.git
 	branch = master
+[submodule "VAWebsite"]
+	path = VAWebsite
+	url = http://git.rwth-aachen.de/ita/VAWebsite.git
+	branch = master
