--- a/.gitmodules
+++ b/.gitmodules
@@ -40,5 +40,5 @@
 	branch = master
 [submodule "VAWebsite"]
 	path = VAWebsite
-	url = http://git.rwth-aachen.de/ita/VAWebsite.git
+	url = https://git.rwth-aachen.de/ita/VAWebsite.git
 	branch = master
