Including automatic copying of Doxy documentation to VAWebsite, if found

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -11,9 +11,16 @@ configure_file( doxygen.footer.html.in doxygen.footer.html @ONLY )
 
 add_custom_target( VADoc "${DOXYGEN_EXECUTABLE}" doxyfile 
 	WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-	COMMENT "Generating VA API documentation with Doxygen" VERBATIM
+	COMMENT "Generating VA C++ API documentation with Doxygen" VERBATIM
 	)
 
 set_property( TARGET VADoc PROPERTY FOLDER "VA" )
 
 install( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html" DESTINATION "share/doc" )
+
+if( VAWEBSITE_FOUND )
+	message( STATUS "cp --recursive --force ${CMAKE_CURRENT_BINARY_DIR}/html ${VAWEBSITE_DIR}/resources/${ITA_VA_VERSION_MAJOR}${ITA_VA_VERSION_MINOR}/doc" )
+	add_custom_command( TARGET VADoc 
+						POST_BUILD COMMAND cp --recursive --force "${CMAKE_CURRENT_BINARY_DIR}/html" "${VAWEBSITE_DIR}/resources/${ITA_VA_VERSION_MAJOR}${ITA_VA_VERSION_MINOR}/doc"
+						COMMENT "Copying files to VAWebsite" VERBATIM )
+endif( )
