--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -19,8 +19,10 @@ set_property( TARGET VADoc PROPERTY FOLDER "VA" )
 install( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html" DESTINATION "share/doc" )
 
 if( VAWEBSITE_FOUND )
-	message( STATUS "cp --recursive --force ${CMAKE_CURRENT_BINARY_DIR}/html ${VAWEBSITE_DIR}/resources/${ITA_VA_VERSION_MAJOR}${ITA_VA_VERSION_MINOR}/doc" )
-	add_custom_command( TARGET VADoc 
-						POST_BUILD COMMAND cp --recursive --force "${CMAKE_CURRENT_BINARY_DIR}/html" "${VAWEBSITE_DIR}/resources/${ITA_VA_VERSION_MAJOR}${ITA_VA_VERSION_MINOR}/doc"
-						COMMENT "Copying files to VAWebsite" VERBATIM )
+	if( WIN32 )
+		configure_file( "copy_doc_to_va_website.bat.proto" "copy_doc_to_va_website.bat" @ONLY )
+		add_custom_command( TARGET VADoc 
+					POST_BUILD COMMAND copy_doc_to_va_website.bat
+					COMMENT "Copying files to VAWebsite" VERBATIM )
+	endif()
 endif( )
