--- a/doc/doxygen.footer.html.in
+++ b/doc/doxygen.footer.html.in
@@ -4,7 +4,7 @@
 		Virtual Acoustics (VA) | <a href="http://www.virtualacoustics.org">http://www.virtualacoustics.org</a> <br>
 		Source code licensed under the Apache License, Version 2.0 <br />
 		C++ API documentation auto generated and licensed under <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License 4.0</a> <br />
-		<a href="http://www.akustik.rwth-aachen.de">Institute of Technical Acoustics (ITA)</a> <br /> RWTH Aachen University, Germany.
+		&copy 2017-2018 <a href="http://www.akustik.rwth-aachen.de">Institute of Technical Acoustics (ITA)</a> <br /> RWTH Aachen University, Germany.
 	  </CENTER>
     </DIV>
   </BODY>
