Adding option to include external MSVC projects (core libs)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,19 @@ if( ITA_VA_WITH_BINDING_PYTHON )
 endif( )
 
 
+if( MSVC )
+	set( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS ON CACHE BOOL "If enabled, msvc projects of external ITA packages will be included in the solution" )
+	if( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS )
+		vista_add_external_msvc_project_of_package( VistaCoreLibs "VistaCoreLibs" DEPENDENT VANet VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITABase "ITACoreLibs" DEPENDENT VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITAConvolution "ITACoreLibs" DEPENDENT VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITACTC "ITACoreLibs" DEPENDENT VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITADataSources "ITACoreLibs" DEPENDENT VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITADSP "ITACoreLibs" DEPENDENT VACore SILENT )
+		vista_add_external_msvc_project_of_package( ITAFFT "ITACoreLibs" DEPENDENT VACore SILENT )
+	endif( )
+endif( )
+
 # version
 
 if( NOT DEFINED ITA_VA_VERSION_MAJOR )
