Fixing some policy problems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required( VERSION 2.8 )
-
+cmake_minimum_required(VERSION 2.8.12)
 project( VA )
 
 set( VA_COMMON_BUILD ON )
@@ -140,7 +139,7 @@ endif( )
 
 if( MSVC )
 	set( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS ON CACHE BOOL "If enabled, msvc projects of external ITA packages will be included in the solution" )
-	if( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS )
+	if( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS AND ITA_VA_WITH_CORE )
 		vista_add_external_msvc_project_of_package( VistaCoreLibs "VistaCoreLibs" DEPENDENT VANet VACore SILENT )
 		vista_add_external_msvc_project_of_package( ITABase "ITACoreLibs" DEPENDENT VACore SILENT )
 		vista_add_external_msvc_project_of_package( ITAConvolution "ITACoreLibs" DEPENDENT VACore SILENT )
