CMake (WIP): - removed many vista commands - now uses option() instead of set(...CACHE...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ project (
 	LANGUAGES CXX C
 )
 
+#Set the install root folder if not specified by the user (e.g. BinDirectory/dist/Release
+#TODO: $<CONFIG> is not properly resolved
 IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/dist/$<CONFIG> CACHE PATH "" FORCE)
+  set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/dist/$<CONFIG> CACHE PATH "" FORCE)
 ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 set (CMAKE_DEBUG_POSTFIX "-d")
@@ -22,106 +24,65 @@ if (CMAKE_GENERATOR MATCHES "Visual Studio")
 	set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 endif ()
 
-if( MSVC )
-	#add_definitions( "/wd4251 /W4 -D_CRT_SECURE_NO_WARNINGS" )
-endif( )
 
-# example how to set ExternalLibs folder for an entire project (without ENV var)
-#list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../VistaCMakeCommon" )
-
-# ... or with ENV variable
-#list( APPEND CMAKE_MODULE_PATH "$ENV{VISTA_CMAKE_COMMON}" )
-
-#include( VistaCommon )
-
-#vista_find_package( Doxygen QUIET )
+#---Options---
 
 option(BUILD_SHARED_LIBS "" ON)
 
-if( NOT DEFINED ITA_VISTA_BUILD_STATIC )
-	set( ITA_VISTA_BUILD_STATIC OFF CACHE BOOL "Build against static ViSTA libraries" )
-endif( )
+#TODO: Still required?
+#if( NOT DEFINED ITA_VISTA_BUILD_STATIC )
+#	set( ITA_VISTA_BUILD_STATIC OFF CACHE BOOL "Build against static ViSTA libraries" )
+#endif( )
+#if( NOT DEFINED ITA_CORE_LIBS_BUILD_STATIC )
+#	set( ITA_VISTA_BUILD_STATIC OFF CACHE BOOL "Build against static ITA core libraries" )
+#endif( )
+#if( NOT DEFINED ITA_GEOMETRICAL_ACOUSTICS_BUILD_STATIC )
+#	set( ITA_GEOMETRICAL_ACOUSTICS_BUILD_STATIC OFF CACHE BOOL "Build against static ITA geometrical acoustics libraries" )
+#endif( )
+#if( NOT DEFINED ITA_ACOUSTIC_VISUALIZATION_STATIC )
+#	set( ITA_ACOUSTIC_VISUALIZATION_STATIC OFF CACHE BOOL "Build against static ITA acoustic visualization libraries" )
+#endif( )
 
-if( NOT DEFINED ITA_CORE_LIBS_BUILD_STATIC )
-	set( ITA_VISTA_BUILD_STATIC OFF CACHE BOOL "Build against static ITA core libraries" )
-endif( )
+#TODO: Still required?
+#if( NOT DEFINED ITA_VA_INSTALL_WITH_DLLS )
+#	set( ITA_VA_INSTALL_WITH_DLLS ON CACHE BOOL "Install VA with depending DLLs (use this switch with care)" )
+#endif( )
 
-if( NOT DEFINED ITA_GEOMETRICAL_ACOUSTICS_BUILD_STATIC )
-	set( ITA_GEOMETRICAL_ACOUSTICS_BUILD_STATIC OFF CACHE BOOL "Build against static ITA geometrical acoustics libraries" )
-endif( )
+#Switches for components
+option( ITA_VA_WITH_CORE "Include VA core library" OFF )
+option( ITA_VA_WITH_SERVER_APP "Include VA server application (requires ITA_VA_WITH_CORE)" OFF )
+#TODO: Get rid of Redstart
+#option( ITA_VA_WITH_REDSTART_APP "Include Redstart, the VA GUI application" OFF )
+option( ITA_VA_WITH_TESTS "Include VA tests" OFF )
+option( ITA_VA_GENERATE_DOCUMENTATION "Generate source VA documentation (requires Doxygen)" OFF )
+option( ITA_VA_WITH_BENCHMARKS "Include VA benchmarks" OFF )
 
-if( NOT DEFINED ITA_ACOUSTIC_VISUALIZATION_STATIC )
-	set( ITA_ACOUSTIC_VISUALIZATION_STATIC OFF CACHE BOOL "Build against static ITA acoustic visualization libraries" )
-endif( )
+#Bindings
+option( ITA_VA_WITH_BINDING_MATLAB "Include Matlab binding for VA (requires Matlab and NatNetSDK)" OFF )
+option( ITA_VA_WITH_BINDING_CS "Include C# binding for VA" ON )
+#TODO: Remove VALUA
+#option( ITA_VA_WITH_BINDING_LUA "Include VA benchmarks" OFF )
+option( ITA_VA_WITH_BINDING_PYTHON "Include Python binding for VA (requires Python)" OFF )
+option( ITA_VA_WITH_UNITY_SCRIPTS "Include VA Unity C# scripts" ON )
+option( ITA_VA_WITH_UNITY_EXTENSIONS_SCRIPTS "Include VA Unity Extensions C# scripts (requires further Unity packages like LHM and VRTK)" OFF )
 
-
-if( NOT DEFINED ITA_VA_INSTALL_WITH_DLLS )
-	set( ITA_VA_INSTALL_WITH_DLLS ON CACHE BOOL "Install VA with depending DLLs (use this switch with care)" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_CORE )
-	set( ITA_VA_WITH_CORE OFF CACHE BOOL "Include VA core library" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_SERVER_APP )
-	set( ITA_VA_WITH_SERVER_APP OFF CACHE BOOL "Include VA server application (requires ITA_VA_WITH_CORE)" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_REDSTART_APP )
-	set( ITA_VA_WITH_REDSTART_APP OFF CACHE BOOL "Include Redstart, the VA GUI application" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_TESTS )
-	set( ITA_VA_WITH_TESTS OFF CACHE BOOL "Include VA tests" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_GENERATE_DOCUMENTATION )
-	set( ITA_VA_GENERATE_DOCUMENTATION OFF CACHE BOOL "Generate source VA documentation (requires Doxygen)" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_BENCHMARKS )
-	set( ITA_VA_WITH_BENCHMARKS OFF CACHE BOOL "Include VA benchmarks" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_BINDING_MATLAB )
-	set( ITA_VA_WITH_BINDING_MATLAB OFF CACHE BOOL "Include Matlab binding for VA" )
-endif( )
-
-if( NOT DEFINED ITA_VA_WITH_BINDING_CS )
-	set( ITA_VA_WITH_BINDING_CS ON CACHE BOOL "Include C# binding for VA" )
-endif( )
-
-if( NOT DEFINED ITA_VA_WITH_BINDING_LUA )
-	set( ITA_VA_WITH_BINDING_LUA OFF CACHE BOOL "Include Lua binding for VA" )
-endif( )
-
-if( NOT DEFINED ITA_VA_WITH_BINDING_PYTHON )
-	set( ITA_VA_WITH_BINDING_PYTHON OFF CACHE BOOL "Include Python binding for VA" )
-endif( )
-
-
-if( NOT DEFINED ITA_VA_WITH_UNITY_SCRIPTS )
-	set( ITA_VA_WITH_UNITY_SCRIPTS ON CACHE BOOL "Include VA Unity C# scripts" )
-endif( )
-
-if( NOT DEFINED ITA_VA_WITH_UNITY_EXTENSIONS_SCRIPTS )
-	set( ITA_VA_WITH_UNITY_EXTENSIONS_SCRIPTS OFF CACHE BOOL "Include VA Unity Extensions C# scripts (requires further Unity packages like LHM and VRTK)" )
-endif( )
-
-
-if( ITA_VA_INSTALL_WITH_DLLS )
+#if( ITA_VA_INSTALL_WITH_DLLS )
 	#vista_install_all_dlls( bin )
+#endif( )
+
+# Version
+if( NOT DEFINED ITA_VA_VERSION_MAJOR )
+	set( ITA_VA_VERSION_MAJOR "v2021" CACHE STRING "VA version major (usually 'v' and year)" )
+endif( )
+if( NOT DEFINED ITA_VA_VERSION_MINOR )
+	set( ITA_VA_VERSION_MINOR "a" CACHE STRING "VA version minor (usually a,b,c ...)" )
 endif( )
 
+#---End: Options---
 
-# VA submodules
+
+
+#---VA submodules---
 
 add_subdirectory( VABase )
 add_subdirectory( VANet )
@@ -136,35 +97,37 @@ endif( )
 
 if( ITA_VA_WITH_SERVER_APP )
 	if( NOT ITA_VA_WITH_CORE )
-		message( SEND_ERROR "Cannot build VAServer without VACore." )
+		message( SEND_ERROR "Cannot build VAServer without VACore. Activate ITA_VA_WITH_CORE first" )
 	endif( )
 	add_subdirectory( VAServer )
-	#vista_use_package( VACore REQUIRED FIND_DEPENDENCIES ) # ... installs VACore dll
 endif( )
 
-if( ITA_VA_WITH_REDSTART_APP )
+#if( ITA_VA_WITH_REDSTART_APP )
 	#add_subdirectory( Redstart )
-	#vista_use_package( VACore REQUIRED FIND_DEPENDENCIES ) # ... installs VACore dll
-endif( )
+#endif( )
 
 if( ITA_VA_WITH_BINDING_MATLAB )
 	add_subdirectory( VAMatlab )
-	#vista_use_package( VAMatlab REQUIRED FIND_DEPENDENCIES ) # ... installs VAMatlab mex
 endif( )
 
 if( ITA_VA_WITH_BINDING_CS )
-	#add_subdirectory( VACS )
+	add_subdirectory( VACS )
 endif( )
 
-if( ITA_VA_WITH_BINDING_LUA )
+#TODO: Remove?
+#if( ITA_VA_WITH_BINDING_LUA )
 	#add_subdirectory( VALua )
-endif( )
+#endif( )
 
 if( ITA_VA_WITH_BINDING_PYTHON )
+	#TODO: Fix and test VAPython
 	#add_subdirectory( VAPython )
 endif( )
 
+#---END: VA submodules---
 
+
+#TODO: Still required?
 if( MSVC AND NOT ITA_SUITE_COMMON_BUILD )
 	set( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS ON CACHE BOOL "If enabled, msvc projects of external ITA packages will be included in the solution" )
 	if( ITA_VA_INCLUDE_EXTERNAL_MSVC_PROJECTS AND ITA_VA_WITH_CORE )
@@ -182,39 +145,9 @@ if( MSVC AND NOT ITA_SUITE_COMMON_BUILD )
 	endif( )
 endif( )
 
-# version
-
-if( NOT DEFINED ITA_VA_VERSION_MAJOR )
-	set( ITA_VA_VERSION_MAJOR "v2021" CACHE STRING "VA version major (usually 'v' and year)" )
-endif( )
-
-if( NOT DEFINED ITA_VA_VERSION_MINOR )
-	set( ITA_VA_VERSION_MINOR "a" CACHE STRING "VA version minor (usually a,b,c ...)" )
-endif( )
-
-
-# (selective) license, readme and logo
-
-install( FILES README.md DESTINATION . )
-install( DIRECTORY logo DESTINATION . )
-
-if( ITA_VA_COPYING_GNU_GPL )
-
-	set( SELECTED_LICENSE "GNU General Public License" )
-	set( GPL_DEPENDENCIES "FFTW3" )
-	configure_file( COPYING.proto "${CMAKE_CURRENT_SOURCE_DIR}/COPYING" @ONLY )
-	install( FILES COPYING DESTINATION . )
-	
-else( )
-
-	install( FILES LICENSE.md DESTINATION . )
-
-endif( )
-
-
-# doc
-
+# Documentation
 if( ITA_VA_GENERATE_DOCUMENTATION )
+	#TODO: Find doxygen / Test this
 
 	if( NOT DOXYGEN_EXECUTABLE )
 		message( FATAL_ERROR "VA documentation requires Doxygen." )
@@ -230,13 +163,30 @@ if( ITA_VA_GENERATE_DOCUMENTATION )
 
 endif( )
 
+#---Install---
 
-# unity
+# (Selective) license, readme and logo
+install( FILES README.md DESTINATION . COMPONENT ${PROJECT_NAME} )
+install( DIRECTORY logo DESTINATION . COMPONENT ${PROJECT_NAME} )
 
-if( ITA_VA_WITH_UNITY_SCRIPTS )
-	install( DIRECTORY "VAUnity" DESTINATION "unity" )
+if( ITA_VA_COPYING_GNU_GPL )
+
+	set( SELECTED_LICENSE "GNU General Public License" )
+	set( GPL_DEPENDENCIES "FFTW3" )
+	configure_file( COPYING.proto "${CMAKE_CURRENT_SOURCE_DIR}/COPYING" @ONLY )
+	install( FILES COPYING DESTINATION . COMPONENT ${PROJECT_NAME} )
+	
+else( )
+
+	install( FILES LICENSE.md DESTINATION . COMPONENT ${PROJECT_NAME} )
+
 endif( )
 
+
+# Unity scripts
+if( ITA_VA_WITH_UNITY_SCRIPTS )
+	install( DIRECTORY "VAUnity" DESTINATION "unity" COMPONENT ${PROJECT_NAME} )
+endif( )
 if( ITA_VA_WITH_UNITY_EXTENSIONS_SCRIPTS )
-	install( DIRECTORY "VAUnityExtensions" DESTINATION "unity" )
+	install( DIRECTORY "VAUnityExtensions" DESTINATION "unity" COMPONENT ${PROJECT_NAME} )
 endif( )
